--- a/config.json
+++ b/config.json
@@ -1,5 +1,15 @@
 {
-    "applicationName": "Ichiharu Web Template",
-    "webserverPort": 18600,
-    "mongodbURL": "mongodb://localhost:27017/"
+    "webserver": {
+        "domain": "localhost:5000",
+        "port": 5000
+    },
+    "mongo": {
+        "url": "mongodb://localhost:27017/",
+        "database": "Genkan",
+        "collection": "users"
+    },
+    "app": {
+        "secretKey": "please change this as this is used to secure cookies"
+    },
+    "debugMode": true
 }
