--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
-  "name": "ichiharu-web-template",
-  "version": "1.0.0",
-  "description": "Koukyo - Store your meeting links with relative ease",
+  "name": "hakkou-app-template",
+  "version": "0.1.2",
+  "description": "No nonsense authentication system using MongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
     "test": "nodemon app"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ichiharuno/web-template.git"
+    "url": "git+https://github.com/HakkouHQ/Hakkou-App-Template.git"
   },
-  "author": "Ichiharuno",
-  "private": true,
-  "homepage": "https://ichiharu.com",
+  "keywords": [
+    "auth",
+    "login",
+    "mongodb"
+  ],
+  "author": "HakkouApp",
+  "license": "MPL-2.0",
+  "bugs": {
+    "url": "https://github.com/HakkouHQ/Hakkou-App-Template/issues"
+  },
+  "homepage": "https://github.com/HakkouHQ/Hakkou-App-Template#readme",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "chalk": "^4.1.0",
-    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
-    "express-minify": "^1.0.0",
-    "hash-anything": "^1.3.1",
-    "loglevel": "^1.7.0",
+    "express-formidable": "^1.2.0",
+    "express-handlebars": "^5.2.1",
+    "express-slow-down": "^1.4.0",
+    "handlebars": "^4.7.7",
+    "loglevel": "^1.7.1",
     "loglevel-plugin-prefix": "^0.8.4",
-    "mongodb": "^3.6.3",
-    "socket.io": "^3.0.1",
-    "uuid": "^8.3.1",
-    "zlib": "^1.0.5"
+    "mongodb": "^3.6.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
