--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "hakkou-app-template",
-  "version": "0.1.2",
-  "description": "No nonsense authentication system using MongoDB",
+  "name": "tanuki-node-boilerplate",
+  "version": "1.0.0",
+  "description": "TanukiWorks & TanukiHQ NodeJS application boilerplate",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon app"
+    "start": "node app",
+    "watch": "nodemon app",
+    "lint": "eslint app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HakkouHQ/Hakkou-App-Template.git"
+    "url": "git+https://github.com/TanukiHQ/Tanuki-Node-Boilerplate.git"
   },
   "keywords": [
     "auth",
     "login",
     "mongodb"
   ],
-  "author": "HakkouApp",
+  "author": "TanukiHQ",
   "license": "MPL-2.0",
   "bugs": {
-    "url": "https://github.com/HakkouHQ/Hakkou-App-Template/issues"
+    "url": "https://github.com/TanukiHQ/Tanuki-Node-Boilerplate/issues"
   },
-  "homepage": "https://github.com/HakkouHQ/Hakkou-App-Template#readme",
+  "homepage": "https://github.com/TanukiHQ/Tanuki-Node-Boilerplate#readme",
   "dependencies": {
-    "app-root-path": "^3.0.0",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
-    "express-handlebars": "^5.2.1",
-    "express-slow-down": "^1.4.0",
+    "express-handlebars": "^5.3.2",
+    "express-rate-limit": "^5.3.0",
     "handlebars": "^4.7.7",
-    "loglevel": "^1.7.1",
-    "loglevel-plugin-prefix": "^0.8.4",
-    "mongodb": "^3.6.4"
+    "mongoose": "^5.13.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "eslint": "^7.31.0",
+    "eslint-config-google": "^0.14.0",
+    "nodemon": "^2.0.12"
   }
 }
