--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tanuki-node-boilerplate",
-  "version": "1.0.0",
-  "description": "TanukiWorks & TanukiHQ NodeJS application boilerplate",
+  "version": "2.0.0",
+  "description": "TanukiHQ NodeJS application boilerplate",
   "main": "app.js",
   "scripts": {
     "start": "node app",
@@ -13,9 +13,8 @@
     "url": "git+https://github.com/TanukiHQ/Tanuki-Node-Boilerplate.git"
   },
   "keywords": [
-    "auth",
-    "login",
-    "mongodb"
+    "nodejs",
+    "boilerplate"
   ],
   "author": "TanukiHQ",
   "license": "MPL-2.0",
@@ -25,15 +24,22 @@
   "homepage": "https://github.com/TanukiHQ/Tanuki-Node-Boilerplate#readme",
   "dependencies": {
     "chalk": "^4.1.1",
-    "cookie-parser": "^1.4.5",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "express": "^4.17.1",
-    "express-formidable": "^1.2.0",
     "express-handlebars": "^5.3.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^5.3.0",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
-    "mysql2": "^2.3.3-rc.0",
-    "sequelize": "^6.9.0",
+    "hash-anything": "^1.3.2",
+    "luxon": "^2.4.0",
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.3.3",
+    "require-dir-all": "^0.4.15",
+    "string-strip-html": "^9.1.12",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
